--- a/src/projects.json
+++ b/src/projects.json
@@ -5,10 +5,7 @@
         "end-date": "August 2019",
         "description": "A full-stack development project using D3.js for viusalizations and sci-kit learn for machine learning categorization, Tweetocracy explores the twitter accounts of candidates running for the presidency of the United States in the 2020 elections. Designed to provide as much control as possible to the front-end user, the data can be presented through seemingly endless combinations of filters, including any combination of candidate, metric of choice (retweets/favorites), publish date, etc. A machine learning model was trained as well to try to categorize tweets by author, incorporating Natural Language Processing (NLP) along with the more straightforward data.",
         "github": "https://github.com/elanderos318/Tweetocracy",
-        "website": "https://tweetocracy.herokuapp.com/",
-        "image-1": "./assets/tweetocracy/tweetocracy-1.PNG",
-        "image-2": "./images/tweetocracy/image-2",
-        "image-3": "./images/tweetocracy/image-3"
+        "website": "https://tweetocracy.herokuapp.com/"
     },
     {
         "title": "Bulls and Bears: Visualization of Capital Markets",
@@ -17,5 +14,14 @@
         "description": "This project makes use of a python flask backend to serve S&P 500 index data from Yahoo Finance, delivered to the front-end and displayed using D3.js. The idea is to display detailed statistical distributions of the data and provide information about drift and variance of index prices during 'Bull' and 'Bear' markets. The front-end user can adjust the sensitivity of price levels that 'activate' changes in the market, and the backend will again serve the data according to the new threshold.",
         "github": "https://github.com/elanderos318/Bulls-and-Bears-Viz",
         "website": "https://bulls-bears.herokuapp.com/"
+    },
+    {
+        "title": "ETL Project",
+        "start-date": "February 2019",
+        "end-date": "February 2019",
+        "description": "Using CSV files for Chicago speed camera locations and speeding violations in Chicago, this project aimed to synthesize the datasets for further inspection - such as arriving with a set of violations at each speed camera location. Our team also found weather data for Midway airport, which could be used as a proxy for weather conditions in Chicago. Combining this with the previous datasets, one can see if a relationship exists between weather and number violations. The end goal of this project is to create a SQL table with clean data ready for analysis",
+        "github": "https://github.com/elanderos318/ETL-Project",
+        "website": false
     }
+    
 ]
