--- a/src/projects.json
+++ b/src/projects.json
@@ -27,7 +27,9 @@
         "title": "Portfolio Website",
         "start-date": "September 2019",
         "end-date": "September 2019",
-        "description": "A website designed from the ground-up displaying my experience, skills, and accomplishements. This is the first project in which the CSS is completely, originally engineered. Also, this project was bootstrapped using 'create-react-app', and React is the essential library at work here, with Components/Elements allowing for a simple methodology for displaying and writing code. Here, you may access my résumé and other contact information such as my email, LinkedIn, and Github."
+        "description": "A website designed from the ground-up displaying my experience, skills, and accomplishements. This is the first project in which the CSS is completely, originally engineered. Also, this project was bootstrapped using 'create-react-app', and React is the essential library at work here, with Components/Elements allowing for a simple methodology for displaying and writing code. Here, you may access my résumé and other contact information such as my email, LinkedIn, and Github.",
+        "github": "https://github.com/elanderos318/portfolio-website",
+        "website": "https://elanderos318.github.io/portfolio-website/"
     }
     
 ]
